test/errors/templates_error/zs/unresolved_template_instantiation_error.zs
package unresolved_template_instantiation_error;

struct UnresolvedTemplateInstantiationError
{
    TemplatedStruct<uint32> value;
};
